Main And Services Finished --> overflow Bug

--- a/css/home.css
+++ b/css/home.css
@@ -47,7 +47,7 @@
         background-image: url(../assets/illustration-1\ light.png);
         background-size: cover;
         background-repeat: no-repeat;
-        height: 500px;
+        height: 600px;
         margin-top: 10px;
     }
 
@@ -58,7 +58,7 @@
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(50px);
         border-radius: 10px;
-        height: 500px;
+        height: 600px;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -147,7 +147,7 @@
         background-image: url(../assets/illustration-1\ light.png);
         background-size: cover;
         background-repeat: no-repeat;
-        height: 500px;
+        height: 600px;
         margin-top: 10px;
     }
 
@@ -158,7 +158,7 @@
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(5px);
         border-radius: 10px;
-        height: 500px;
+        height: 600px;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -242,7 +242,7 @@
 
         background-size: cover;
         background-repeat: no-repeat;
-        height: 500px;
+        height: 600px;
         margin-top: 10px;
     }
 
@@ -252,7 +252,7 @@
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         border-radius: 10px;
-        height: 500px;
+        height: 600px;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -340,7 +340,7 @@
 
         background-size: cover;
         background-repeat: no-repeat;
-        height: 500px;
+        height: 600px;
         margin-top: 10px;
     }
 
@@ -350,7 +350,7 @@
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         border-radius: 10px;
-        height: 500px;
+        height: 600px;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -437,7 +437,7 @@
 
         background-size: cover;
         background-repeat: no-repeat;
-        height: 500px;
+        height: 600px;
         margin-top: 10px;
     }
 
@@ -447,7 +447,7 @@
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         border-radius: 10px;
-        height: 500px;
+        height: 600px;
         text-align: center;
         display: flex;
         flex-direction: column;
