--- a/css/service.css
+++ b/css/service.css
@@ -1,5 +1,9 @@
 /* Google fonts */
 
+  @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@1,800&display=swap');
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -17,18 +21,89 @@
 /* end of fade-In css */
 
 .service-img {
-    height: 120px;
-    width: 200px;
+    height: 130px;
+    width: 120px;
+    border-radius:50% ;
+    padding: 1.5em ;
+}
+.services{
+    margin-top: .5em !important; 
+ 
 }
 
 .app-dev {
-    border: 1px solid black;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 25px 1px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
+    background: rgba( 8, 12, 196, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 5.5px );
+-webkit-backdrop-filter: blur( 5.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.app-dev:hover{
+    background-color: white;
 }
 
 .web-dev {
-    border: 1px solid black;
+   border-radius: 2rem;
+    box-shadow: 0px 0px 25px 1px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
+    background: rgba( 15, 119, 189, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 5.5px );
+-webkit-backdrop-filter: blur( 5.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.web-dev:hover{
+    background-color: white;
+}
+
+.service-detail{
+    padding-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 .support {
-    border: 1px solid black;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 25px 1px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
+    background: rgba( 189, 16, 224, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 5.5px );
+-webkit-backdrop-filter: blur( 5.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
+.support:hover{
+    background-color: white;
+}
+
+.service-text{
+    text-align: center;
+    margin: 1em 0;
+    font-family: 'Playfair Display', serif;
+}
+.service-text>h1{
+    margin: 0;
+    padding: 0;
+}
+.service-text>i{
+    font-size: bolder;
+    color: blueviolet;
+}
+/* font-family: 'Playfair Display', serif;
+font-family: 'PT Sans Narrow', sans-serif; */
+
+.service-name{
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-weight: 700;
+}
+.service-detail{
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-weight: 400;
+}
+.service-detail>strong{
+    color: blueviolet;
+}
+
+
